@@ -1,3 +1,14 @@
+2018-04-09  Michael Catanzaro  <mcatanzaro@igalia.com>
+
+        [GTK] WaylandCompositorDisplay leaks its wl_display
+        https://bugs.webkit.org/show_bug.cgi?id=184406
+
+        Reviewed by Carlos Garcia Campos.
+
+        * WebProcess/gtk/WaylandCompositorDisplay.cpp:
+        (WebKit::WaylandCompositorDisplay::create): Fix a log message (drive-by).
+        (WebKit::WaylandCompositorDisplay::WaylandCompositorDisplay): Fix the leak.
+
 2018-04-06  Brian Burg  <bburg@apple.com>
 
         REGRESSION(r228371): WebAutomationSession::deleteAllCookies doesn't delete some cookies
